--- a/html/index.html
+++ b/html/index.html
@@ -46,7 +46,7 @@
             <div class="flex flex-col md:flex-row justify-between items-center gap-10" data-aos="fade-up" data-aos-duration="1000">
                 <div class="w-full flex flex-col gap-5">
                     <h3 class="text-4xl font-bold">Wath is SABU ?</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                    <p>SABU, which stands for Secure Against Bad USB Key, is an innovative project carried out by three students as part of cybersecurity training. SABU presents itself as a state-of-the-art whitestation based on a client-server model. It is equipped with the latest generation detection means, capable of identifying and reporting viruses present on your employees' USB keys. This project aims to provide a robust solution for securing USB devices, ensuring that harmful malware does not compromise your systems.</p>
                 </div>
                 <div class="md:w-3/4 lg:max-w-xl w-3/4">
                     <img class="relative sm:max-w-xl sm:mx-auto " src="../assets/img/undraw_project.png" alt="">
@@ -71,7 +71,7 @@
                 </div>
                 <div class="w-full flex flex-col gap-5">
                     <h3 class="text-4xl font-bold">Whitestation</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                    <p>The whitestation concept is based on the idea of ​​providing a secure and controlled environment for the use and processing of USB devices. A whitestation serves as a buffer zone where USB devices can be examined and cleaned before being connected to the company's main network.</p>
                 </div>
             </div>
         </div>
