--- a/html/index.html
+++ b/html/index.html
@@ -28,7 +28,7 @@
                 <h1 id="title-content" class="text-white text-4xl md:text-6xl font-anta"></h1>
                 <div class="flex row space-x-4 justify-center">
                     <a href="https://github.com/sabu-ws/" target="_blank"><button class="bg-white hover:bg-[#13202f] hover:text-white rounded-lg px-4 py-2 transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300">Github</button></a>
-                    <a href="https://github.com/sabu-ws/server/wiki" target="_blank"><button class="bg-white hover:bg-[#13202f] hover:text-white rounded-lg px-4 py-2 transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300">Docs</button></a>
+                    <a href="https://sabu-ws.github.io/docs/" target="_blank"><button class="bg-white hover:bg-[#13202f] hover:text-white rounded-lg px-4 py-2 transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300">Docs</button></a>
                 </div>
                 <div class="flex justify-center">
                     <button class="animate-bounce mt-8" onclick="scroolViewFunc()"><svg class="w-8 fill-white hover:fill-[#13202f]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M256 0a256 256 0 1 0 0 512A256 256 0 1 0 256 0zM127 281c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l71 71L232 136c0-13.3 10.7-24 24-24s24 10.7 24 24l0 182.1 71-71c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9L273 393c-9.4 9.4-24.6 9.4-33.9 0L127 281z"/></svg></button>
