--- a/html/index.html
+++ b/html/index.html
@@ -104,20 +104,20 @@
                     </div>
                     <div class="flex w-full gap-2" data-aos="fade-right" data-aos-delay="100">
                         <div class="rounded-full flex items-center justify-center w-11 h-10 select-none bg-[#13202f]">
-                            <svg class="w-4 fill-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"/></svg>
+                            <svg class="w-4 fill-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M88.7 223.8L0 375.8V96C0 60.7 28.7 32 64 32H181.5c17 0 33.3 6.7 45.3 18.7l26.5 26.5c12 12 28.3 18.7 45.3 18.7H416c35.3 0 64 28.7 64 64v32H144c-22.8 0-43.8 12.1-55.3 31.8zm27.6 16.1C122.1 230 132.6 224 144 224H544c11.5 0 22 6.1 27.7 16.1s5.7 22.2-.1 32.1l-112 192C453.9 474 443.4 480 432 480H32c-11.5 0-22-6.1-27.7-16.1s-5.7-22.2 .1-32.1l112-192z"/></svg>
                         </div>
                         <div class="w-full flex flex-col gap-2 mt-2">
-                            <p class="text-xl text-white">Feature 3</p>
-                            <p class="text-titlecolor">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <p class="text-xl text-white">File Storage System</p>
+                            <p class="text-titlecolor">SABU has an integrated storage system allowing your employees to save files from their USB keys after scanning them. This ensures that only secure files are stored and used in your work environment.</p>
                         </div>
                     </div>
                     <div class="flex w-full gap-2" data-aos="fade-left" data-aos-delay="100">
                         <div class="rounded-full flex items-center justify-center w-11 h-10 select-none bg-[#13202f]">
-                            <svg class="w-4 fill-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"/></svg>
+                            <svg class="w-4 fill-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path d="M256 64H384v64H256V64zM240 0c-26.5 0-48 21.5-48 48v96c0 26.5 21.5 48 48 48h48v32H32c-17.7 0-32 14.3-32 32s14.3 32 32 32h96v32H80c-26.5 0-48 21.5-48 48v96c0 26.5 21.5 48 48 48H240c26.5 0 48-21.5 48-48V368c0-26.5-21.5-48-48-48H192V288H448v32H400c-26.5 0-48 21.5-48 48v96c0 26.5 21.5 48 48 48H560c26.5 0 48-21.5 48-48V368c0-26.5-21.5-48-48-48H512V288h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H352V192h48c26.5 0 48-21.5 48-48V48c0-26.5-21.5-48-48-48H240zM96 448V384H224v64H96zm320-64H544v64H416V384z"/></svg>
                         </div>
                         <div class="w-full flex flex-col gap-2 mt-2">
-                            <p class="text-xl text-white">Feature 4</p>
-                            <p class="text-titlecolor">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <p class="text-xl text-white">Protocol Break</p>
+                            <p class="text-titlecolor">Thanks to its client-server architecture, SABU ensures an efficient protocol break. Files can flow through the SABU system securely, minimizing the risk of malware spreading. This allows your employees to transfer their files in a secure and controlled manner.</p>
                         </div>
                     </div>
                     <div class="flex w-full gap-2" data-aos="fade-right" data-aos-delay="200">
