--- a/html/index.html
+++ b/html/index.html
@@ -122,20 +122,20 @@
                     </div>
                     <div class="flex w-full gap-2" data-aos="fade-right" data-aos-delay="200">
                         <div class="rounded-full flex items-center justify-center w-11 h-10 select-none bg-[#13202f]">
-                            <svg class="w-4 fill-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"/></svg>
+                            <svg class="w-4 fill-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path d="M144 0a80 80 0 1 1 0 160A80 80 0 1 1 144 0zM512 0a80 80 0 1 1 0 160A80 80 0 1 1 512 0zM0 298.7C0 239.8 47.8 192 106.7 192h42.7c15.9 0 31 3.5 44.6 9.7c-1.3 7.2-1.9 14.7-1.9 22.3c0 38.2 16.8 72.5 43.3 96c-.2 0-.4 0-.7 0H21.3C9.6 320 0 310.4 0 298.7zM405.3 320c-.2 0-.4 0-.7 0c26.6-23.5 43.3-57.8 43.3-96c0-7.6-.7-15-1.9-22.3c13.6-6.3 28.7-9.7 44.6-9.7h42.7C592.2 192 640 239.8 640 298.7c0 11.8-9.6 21.3-21.3 21.3H405.3zM224 224a96 96 0 1 1 192 0 96 96 0 1 1 -192 0zM128 485.3C128 411.7 187.7 352 261.3 352H378.7C452.3 352 512 411.7 512 485.3c0 14.7-11.9 26.7-26.7 26.7H154.7c-14.7 0-26.7-11.9-26.7-26.7z"/></svg>
                         </div>
                         <div class="w-full flex flex-col gap-2 mt-2">
-                            <p class="text-xl text-white">Feature 5</p>
-                            <p class="text-titlecolor">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <p class="text-xl text-white">User Management</p>
+                            <p class="text-titlecolor">SABU includes advanced user management features, allowing you to define specific roles and permissions for each employee. This ensures that each user only accesses functionality and data relevant to their role.</p>
                         </div>
                     </div>
                     <div class="flex w-full gap-2" data-aos="fade-left" data-aos-delay="200">
                         <div class="rounded-full flex items-center justify-center w-11 h-10 select-none bg-[#13202f]">
-                            <svg class="w-4 fill-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"/></svg>
+                            <svg class="w-4 fill-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M288 32c0-17.7-14.3-32-32-32s-32 14.3-32 32V43.5c0 49.9-60.3 74.9-95.6 39.6L120.2 75C107.7 62.5 87.5 62.5 75 75s-12.5 32.8 0 45.3l8.2 8.2C118.4 163.7 93.4 224 43.5 224H32c-17.7 0-32 14.3-32 32s14.3 32 32 32H43.5c49.9 0 74.9 60.3 39.6 95.6L75 391.8c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l8.2-8.2c35.3-35.3 95.6-10.3 95.6 39.6V480c0 17.7 14.3 32 32 32s32-14.3 32-32V468.5c0-49.9 60.3-74.9 95.6-39.6l8.2 8.2c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-8.2-8.2c-35.3-35.3-10.3-95.6 39.6-95.6H480c17.7 0 32-14.3 32-32s-14.3-32-32-32H468.5c-49.9 0-74.9-60.3-39.6-95.6l8.2-8.2c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-8.2 8.2C348.3 118.4 288 93.4 288 43.5V32zM176 224a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm128 56a24 24 0 1 1 0 48 24 24 0 1 1 0-48z"/></svg>
                         </div>
                         <div class="w-full flex flex-col gap-2 mt-2">
-                            <p class="text-xl text-white">Feature 6</p>
-                            <p class="text-titlecolor">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <p class="text-xl text-white">Advanced Virus Detection</p>
+                            <p class="text-titlecolor">The SABU whitestation uses latest generation virus detection technologies, capable of identifying and neutralizing the most recent and sophisticated threats. This advanced protection is essential for preventing malware attacks via USB devices.</p>
                         </div>
                     </div>
                     
