--- a/html/index.html
+++ b/html/index.html
@@ -176,23 +176,23 @@
         <h2 class="flex justify-center text-5xl text-titlecolor font-bold mb-10">Frequently Asked Questions</h2>
         <div class="pr-5 bg-[#0c7ec4] rounded-2xl border border-[#ccd8de]">
             <details class="faq undefined">
-                <summary class="p-5 cursor-pointer font-semibold select-none text-lg text-white" data-aos="fade-up">Why ?</summary>
+                <summary class="p-5 cursor-pointer font-semibold select-none text-lg text-white" data-aos="fade-up">How is SABU performing ?</summary>
                 <div class="pl-8 text-sm pb-5 pr-3 text-titlecolor">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    <p>SABU is light enough to operate efficiently. However, the performance of your server will directly influence the time required for scans. A more powerful server will allow faster scans.</p>
                 </div>
             </details>
             <hr class="ml-5 border border-[#ccd8de]">
             <details class="faq undefined">
-                <summary class="p-5 cursor-pointer font-semibold select-none text-lg text-white" data-aos="fade-up" data-aos-delay="100">Wath ?</summary>
+                <summary class="p-5 cursor-pointer font-semibold select-none text-lg text-white" data-aos="fade-up" data-aos-delay="100">How many endpoints can I manage with SABU ?</summary>
                 <div class="pl-8 text-sm pb-5 pr-3 text-titlecolor">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    <p>There is no configuration limit on the number of endpoints SABU can manage. The only restriction depends on the capacity of your server to support the scan load.</p>
                 </div>
             </details>
             <hr class="ml-5 border border-[#ccd8de]">
             <details class="faq undefined">
-                <summary class="p-5 cursor-pointer font-semibold select-none text-lg text-white" data-aos="fade-up" data-aos-delay="200">How ?</summary>
+                <summary class="p-5 cursor-pointer font-semibold select-none text-lg text-white" data-aos="fade-up" data-aos-delay="200">SABU is free ?</summary>
                 <div class="pl-8 text-sm pb-5 pr-3 text-titlecolor">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    <p>Yes, SABU is completely free and open-source. The community is encouraged to consult and improve the code, thus contributing to the evolution and improvement of the project.</p>
                 </div>
             </details>
         </div>
