add screens in Interface Overview section

--- a/html/index.html
+++ b/html/index.html
@@ -150,22 +150,22 @@
             <h2 class="flex justify-center text-5xl text-titlecolor font-bold mb-10">Interface Overview</h2>
             <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
                 <div data-aos="zoom-in" data-aos-duration="800">
-                    <img class="h-auto max-w-full rounded-lg transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300" src="../assets/img/undraw_image_not_found.png" alt="">
+                    <img class="h-auto max-w-full rounded-lg transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300" src="../assets/img/admin_dashboard.png" alt="">
                 </div>
                 <div data-aos="zoom-in" data-aos-duration="800">
-                    <img class="h-auto max-w-full rounded-lg transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300" src="../assets/img/undraw_image_not_found.png" alt="">
+                    <img class="h-auto max-w-full rounded-lg transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300" src="../assets/img/admin_browser.png" alt="">
                 </div>
                 <div data-aos="zoom-in" data-aos-duration="800">
-                    <img class="h-auto max-w-full rounded-lg transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300" src="../assets/img/undraw_image_not_found.png" alt="">
+                    <img class="h-auto max-w-full rounded-lg transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300" src="../assets/img/admin_server.png" alt="">
                 </div>
                 <div data-aos="zoom-in" data-aos-duration="800">
-                    <img class="h-auto max-w-full rounded-lg transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300" src="../assets/img/undraw_image_not_found.png" alt="">
+                    <img class="h-auto max-w-full rounded-lg transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300" src="../assets/img/admin_users.png" alt="">
                 </div>
                 <div data-aos="zoom-in" data-aos-duration="800">
-                    <img class="h-auto max-w-full rounded-lg transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300" src="../assets/img/undraw_image_not_found.png" alt="">
+                    <img class="h-auto max-w-full rounded-lg transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300" src="../assets/img/admin_logs.png" alt="">
                 </div>
                 <div data-aos="zoom-in" data-aos-duration="800">
-                    <img class="h-auto max-w-full rounded-lg transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300" src="../assets/img/undraw_image_not_found.png" alt="">
+                    <img class="h-auto max-w-full rounded-lg transition ease-in-out delay-150 hover:-translate-y-1 hover:scale-110 duration-300" src="../assets/img/client_interface.png" alt="">
                 </div>
             </div>
         </div>
