--- a/html/index.html
+++ b/html/index.html
@@ -196,7 +196,7 @@
                 </div>
             </details>
         </div>
-        <p class="my-5 text-center text-sm text-gray-400">For any other questions, feel free to reach out to us at <a class="font-bold underline" href="mailto:support@sabu.app">support@sabu.app</a>.</p>
+        <p class="my-5 text-center text-sm text-gray-400">For any other questions, feel free to reach out to us at <a class="font-bold underline" href="mailto:sabu-ws@proton.me">sabu-ws@proton.me</a>.</p>
     </div>
 
     <!-- FOOTER -->
